--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,10 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
+mypy==1.14.1
+mypy-extensions==1.0.0
 requests==2.32.3
+types-requests==2.32.0.20241016
+typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==3.1.3
